# workshop-computer

./: .gitignore  NEW_PROJECT_PLAYBOOK.md  README.md  RP2040_dual_core_flash_safety_notes.md
stepbridge/: ComputerCard.h  README.md  TODO.md  cdc_proto.h  diagnostics.h  flash_store.cpp  flash_store.h  main.cpp  midi_ring.h  sequencer.cpp  sequencer.h  sysex_protocol.h  tusb_config.h  usb_descriptors.c  usb_link.cpp  usb_link.h
stepbridge/tests/: CMakeLists.txt  runner.h  test_sequencer.cpp
stepbridge/web/: app.js  index.html
stepbridge_v1/: .gitignore  CMakeLists.txt  flash_store.cpp  flash_store.h  main.cpp  sequencer.h  sysex_protocol.h  tusb_config.h  usb_link.h
stepbridge_v1/web/: app.js  index.html  styles.css
